FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//////////////////////////////////////////////////////////////////////////

//定义64位无符号长整型
//Define 64bit long integer type
typedef unsigned __int64 QWORD;
//定义下载任务的句柄
//Define downloader handle
typedef LONG *HDownloader;
//定义读取Torrent文件的句柄
//Define Torrent file handle
typedef LONG *HTorrentFile;
//定义生成Torrent文件的句柄
//Define Making Torrent file handle
typedef LONG *HMakeTorrent;
//////////////////////////////////////////////////////////////////////////

struct _tagPeerData
{
    DWORD m_dwIP;
    USHORT m_nPort;
    BYTE m_pPeerID[ IDSIZE ];
	
    //-------------------------------------
	
    BYTE m_bIsLocal;
    char m_szVersion[ AGENTSIZE ];
    QWORD m_qwPeerHaveSize;
    float m_fDownRate;
    float m_fUpRate;
    QWORD m_qwDownloaded;
    QWORD m_qwUploaded;
    float m_fTimeElapsed;
    float m_fPeerDownRate;
    char m_szExtInfo[ 256 ];
};
struct _tagMiniPeerData
{
    DWORD	m_dwIP;
    USHORT	m_nPort;
};
struct _tagAnnounceData
{
    char m_szURL[ 512 ];
    BYTE m_bWorking;
    BYTE m_bHeader;
    UINT m_nCount;
    UINT m_nFailed;
    float m_fTimeLeft;
    float m_fLastTime;
    char m_szExtInfo[ 512 ];
};
struct _tagFileInfo
{
    char m_szFileName[ 512 ];
    QWORD m_qwFileSize;
};
struct _tagErrInfo
{
    char m_szErrInfo[ 1024 ];
};
	
	//获取当前日志文件的路径+名称
	//Get log file name
	FTKERNELAPI_API void BTAPI FTK_Stat_GetLogPathFileName( HDownloader hDownloader, char *lpszFileName );
	
	//获取指定的文件的进度
	//Get the progress of a file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetFileHaveSize( HDownloader hDownloader, int nIndex );
	
	//获取当前用户状态信息的列表
	//Get the peers information
	FTKERNELAPI_API void BTAPI FTK_Stat_GetPeerData( HDownloader hDownloader, _tagPeerData *pData, int &nRetCount, int nMaxCount );
	
	//获取当前部分用户状态信息的列表
	//Get the some peers information
	FTKERNELAPI_API void BTAPI FTK_Stat_GetPeerRangeData( HDownloader hDownloader, _tagPeerData *pData, int nFrom, int nTo, int &nRetCount, int nMaxCount, BOOL bExtInfo = FALSE );
	
	//获取当前用户状态信息的列表(只获取IP和端口)
	//Get the peers information(only IP and port)
	FTKERNELAPI_API void BTAPI FTK_Stat_GetMiniPeerData( HDownloader hDownloader, _tagMiniPeerData *pData, int &nRetCount, int nMaxCount );
	
	//获取当前Announce状态信息的列表
	//Get the status of announces
	FTKERNELAPI_API void BTAPI FTK_Stat_GetAnnounceData( HDownloader hDownloader, _tagAnnounceData *pData, int &nRetCount, int nMaxCount );
	
	//获取当前任务的调试信息
	//Get the debug information of downloader
	FTKERNELAPI_API const char * BTAPI FTK_Stat_GetBTDownloaderInfo( HDownloader hDownloader );
	
	//////////////////////////////////////////////////////////////////////////
	//打开Torrent文件获取信息的函数列表
	//Torrent file interface
	
	//判断是不是自己定义的加密的Torrent文件
	//Return boolean, tell us is a cipher torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Torrent_IsCipherTorrent( const char * lpszFileName );
	
	//执行从文件中读取数据并初始化对象操作
	//Open a torrent file handle
	FTKERNELAPI_API HTorrentFile BTAPI FTK_Torrent_Open( const char * lpszFileName, UINT nCodePage = CP_ACP, const char * lpszDesKey = NULL, BOOL bValidEOF = TRUE, BOOL bValidSort = TRUE );
	
	//执行从文件中读取数据并初始化对象操作, 如果失败, 返回错误信息
	//Open a torrent file handle, if failed, return error information
	FTKERNELAPI_API HTorrentFile BTAPI FTK_Torrent_SafeOpen( const char * lpszFileName, UINT nCodePage = CP_ACP, const char * lpszDesKey = NULL, BOOL bValidEOF = TRUE, BOOL bValidSort = TRUE, _tagErrInfo *pErrInfo = NULL );
	
	//判断是不是自己定义的加密的Torrent数据流对象
	//Return boolean, tell us is a cipher torrent binary data
	FTKERNELAPI_API BOOL BTAPI FTK_Torrent_IsCipherTorrentObj( const BYTE *pData, int nLength );
	
	//执行从Torrent binary object中读取数据并初始化对象操作
	//Open a torrent binary object
	FTKERNELAPI_API HTorrentFile BTAPI FTK_Torrent_OpenObj( const BYTE *pData, int nLength, UINT nCodePage = CP_ACP, const char * lpszDesKey = NULL, BOOL bValidEOF = TRUE, BOOL bValidSort = TRUE, _tagErrInfo *pErrInfo = NULL );
	
	//关闭当前打开的Torrent文件
	//Close Torrent file handle
	FTKERNELAPI_API void BTAPI FTK_Torrent_Close( HTorrentFile hTorrentFile );
	
	//判断是目录还是文件
	//Return boolean, tell us is only a single file in torrent
	FTKERNELAPI_API BOOL BTAPI FTK_Torrent_IsFile( HTorrentFile hTorrentFile );
	
	//获取 Torrent 名称
	//Get the name of torrent file
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetTorrentName( HTorrentFile hTorrentFile );
	
	//获取torrent中的文件的个数(至少一个)
	//Get total number of files
	FTKERNELAPI_API int BTAPI FTK_Torrent_GetFilesCount( HTorrentFile hTorrentFile );
	
	//获取torrent中的文件列表(至少一个)
	//Get a pointer to file list
	FTKERNELAPI_API void BTAPI FTK_Torrent_GetFiles( HTorrentFile hTorrentFile, _tagFileInfo *pFileInfo );
	
	//获取torrent中的文件列表中的某个文件的信息
	//Get a pointer to a file of file list
	FTKERNELAPI_API void BTAPI FTK_Torrent_GetFileInfo( HTorrentFile hTorrentFile, int nIndex, _tagFileInfo *pFileInfo );
	//获取Info的Hash值, 内部使用
	//Get the binary info hash of torrent file
	FTKERNELAPI_API const BYTE * BTAPI FTK_Torrent_GetInfoHash( HTorrentFile hTorrentFile );
	
	//获取info的Hash值, 十六进制
	//Get the hex encoding info hash of torrent file
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetHexInfoHash( HTorrentFile hTorrentFile );
	
	//获取 main annouce url
	//Get mainb announce url
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetMainAnnounce( HTorrentFile hTorrentFile );
	
	//获取 Announce 分组的个数
	//Get the number of all announce list
	FTKERNELAPI_API int BTAPI FTK_Torrent_GetAnnouncesCount( HTorrentFile hTorrentFile );
	
	//获取指定的 Announce 分组包含的Announce的个数
	//Get the size of a announce list
	FTKERNELAPI_API int BTAPI FTK_Torrent_GetAnnounceSize( HTorrentFile hTorrentFile, int nGroupIndex );
	
	//获取指定的 Announce 分组中指定位置的Announce
	//Get a annoucne of a announce list
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetAnnouncesVal( HTorrentFile hTorrentFile, int nGroupIndex, int nIndex );
	
	//获取 注释
	//Get the comments
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetComments( HTorrentFile hTorrentFile );
	
	//获取 Torrent 创建时间
	//Get the creation time of torrent file
	FTKERNELAPI_API time_t BTAPI FTK_Torrent_GetCreateTime( HTorrentFile hTorrentFile );
	
	//获取piece块的大小
	//Get the size of piece
	FTKERNELAPI_API DWORD BTAPI FTK_Torrent_GetPieceSize( HTorrentFile hTorrentFile );
	
	//获取文件的大小
	//Get the total file size to transfer
	FTKERNELAPI_API QWORD BTAPI FTK_Torrent_GetFileSize( HTorrentFile hTorrentFile );
	
	//Piece块的个数
	//Get the total number of piece
	FTKERNELAPI_API DWORD BTAPI FTK_Torrent_GetPieceCount( HTorrentFile hTorrentFile );
	
	//获取Piece Hash 的列表
	//Get a pointer to piece hash list
	FTKERNELAPI_API const BYTE *BTAPI FTK_Torrent_GetPieceHashList( HTorrentFile hTorrentFile );
	//释放PieceHash列表
	//Release piece hash memory
	FTKERNELAPI_API void BTAPI FTK_Torrent_FreePieceHashList( HTorrentFile hTorrentFile );
	
	//获取Torrent文件的语言编码
	//Get language code page of torrent file
	FTKERNELAPI_API UINT BTAPI FTK_Torrent_GetLanCodePage( HTorrentFile hTorrentFile );
	
	//////////////////////////////////////////////////////////////////////////
	//制作Torrent文件的函数列表
	//Create torrent file interface
	
	//打开一个制作torrent文件的句柄
	//Open a making torrent handle
	FTKERNELAPI_API HMakeTorrent BTAPI FTK_MT_Open();
	
	//关闭打开的制作Torrent文件的句柄
	//Close a making torrent handle
	FTKERNELAPI_API void BTAPI FTK_MT_Close( HMakeTorrent hMakeTorrent );
	
	//执行生成对象的操作
	//Start to making torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_MT_MakeTorrent( HMakeTorrent hMakeTorrent );
	
	//停止Torrent文件制作
	//Stop making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_StopMake( HMakeTorrent hMakeTorrent );
	
	//获取制作文件的进度
	//Get progress of making torrent file
	FTKERNELAPI_API double BTAPI FTK_MT_GetMTProgress( HMakeTorrent hMakeTorrent );
	
	//另存为Torrent文件
	//Save as a torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_MT_SaveAsTorrentFile( HMakeTorrent hMakeTorrent, const char * lpszFileName, const char * lpszDesKey = NULL );
	
	//设置 annouce url
	//Set a main announce url
	FTKERNELAPI_API void BTAPI FTK_MT_SetAnnounceUrl( HMakeTorrent hMakeTorrent, const char * lpszValue );
	
	//添加额外的Announce 列表
	//Add a announce list
	FTKERNELAPI_API void BTAPI FTK_MT_AddAnnounceList( HMakeTorrent hMakeTorrent, const char * Announces[], int nCount );
	
	//添加额外的Announce 列表, example: announce1;announce2;announce3;
	//Add a announce list, example: announce1;announce2;announce3;
	FTKERNELAPI_API void BTAPI FTK_MT_AddAnnounceList2( HMakeTorrent hMakeTorrent, const char * lpszAnnounces );
	
	//清空额外的Announce 列表
	//Clear all announce list
	FTKERNELAPI_API void BTAPI FTK_MT_ClearAnnounceList( HMakeTorrent hMakeTorrent );
	
	//设置 注释
	//Set comments
	FTKERNELAPI_API void BTAPI FTK_MT_SetComments( HMakeTorrent hMakeTorrent, const char * lpszValue );
	
	//设置piece块的大小
	//Set piece size to making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetPieceSize( HMakeTorrent hMakeTorrent, DWORD dwPieceSize );
	
	//设置torrent中的文件
	//Set the sourece file to making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetFile( HMakeTorrent hMakeTorrent, const char * lpszFileName );
	
	//设置torrent中的文件目录(多个文件)
	//Set the source path to making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetPath( HMakeTorrent hMakeTorrent, const char * lpszPathName );
	
	//设置Torrent文件的语言代码(只对文件名称, 注释等有效)
	//Set language code of torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetLangCodePage( HMakeTorrent hMakeTorrent, UINT nCodePage = CP_ACP );
	
	//////////////////////////////////////////////////////////////////////////
	//Tracker interface, to get status of one torrent from tracker: peer count/seed count
	
	//HTTP tracker接口， 用于获取http Tracker某任务的状态信息
	//HTTP Tracker interface, to get status of one torrent from http tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_Http1( const char * lpszTracker, const unsigned char *pInfoHash, QWORD qwFileSize, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//HTTP tracker接口， 用于获取http Tracker某任务的状态信息
	//HTTP Tracker interface, to get status of one torrent from http tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_Http2( const char * lpszTorrentFileName, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
	//UDP Tracker interface, to get status of one torrent from UDP tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_UDP1( const char * lpszTracker, const unsigned char *pInfoHash, QWORD qwFileSize, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
	//UDP Tracker interface, to get status of one torrent from UDP tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_UDP2( const char * lpszTorrentFileName, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//////////////////////////////////////////////////////////////////////////
	//Disk cache Settings
	
	//Set Disk cache size
	//设置磁盘缓存的大小
	FTKERNELAPI_API void BTAPI FTK_Disk_SetCache( UINT nMinCacheSize, UINT nMaxCacheSize, UINT nPhyMemorySize );
	
	//////////////////////////////////////////////////////////////////////////
	//Windows environment related interfaces
	
	//Get local machine ip address(get the first ip or best ip if there are more than one NICs)
	//获取本机的IP地址(在有多个的情况下，选择第一个，或者按照一定算法选择最合适的一个)
	FTKERNELAPI_API const char * BTAPI FTK_Win_GetLocalIP( BOOL &bPrivateIP );
	
	//Open Windows ICS/ICF(Windows XP/Windows 2003) 
	//打开操作系统的网络连接防火墙和网络连接共享(Windows XP/Windows 2003)
	FTKERNELAPI_API BOOL BTAPI FTK_Win_OpenWinXPICSF( unsigned short nPort, BOOL &bOpenFirewall, BOOL &bPortMapping, BYTE nProtocol = WCXT_TCP_PORT, const char * lpszIP = NULL, const char * lpszAppName = NULL );
	
	//Open UPnP port mapping(Win9x/WinME/Win2000/WinXP/Win2003)
	//执行对于支持UPnP协议的Router进行自动的端口映射配置(内网处于Router后的机器必用)
	FTKERNELAPI_API BOOL BTAPI FTK_Win_AddUPnPPortMapping( unsigned short nPort, BYTE nProtocol = WCXT_TCP_PORT, const char * lpszIP = NULL );
	
	//Patch Windows XP SP2 tcpip.sys file for best TCP/IP performance
	//对于Windows XP SP2 的tcpip.sys打补丁，破解连接数的限制，提高网络性能
	FTKERNELAPI_API int BTAPI FTK_Win_PacthSP2TCPIPLimitFile( int nLimit = 10 );