FTKernelAPI_SDK/VBDemo/FTKernelAPI.bas


'获取当前日志文件的路径+名称
'Get log file name
Declare Sub FTK_Stat_GetLogPathFileName Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal lpszFileName As String)

'获取指定的文件的进度
'Get the progress of a file
Declare Function FTK_Stat_GetFileHaveSize Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal nIndex As Long) As TwoLong

'获取当前用户状态信息的列表
'Get the peers information
Declare Sub FTK_Stat_GetPeerData Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pData As tagPeerData, ByRef nRetCount As Long, ByVal nMaxCount As Long)

'获取当前部分用户状态信息的列表
'Get the some peers information
Declare Sub FTK_Stat_GetPeerRangeData Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pData As tagPeerData, ByVal nFrom As Long, ByVal nTo As Long, ByRef nRetCount As Long, ByVal nMaxCount As Long, ByVal bExtInfo As Boolean)


'获取当前用户状态信息的列表 Lib "FTKernelAPI"(只获取IP和端口)
'Get the peers information Lib "FTKernelAPI"(only IP and port)
Declare Sub FTK_Stat_GetMiniPeerData Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pData As tagMiniPeerData, ByRef nRetCount As Long, ByVal nMaxCount As Long)

'获取当前Announce状态信息的列表
'Get the status of announces
Declare Sub FTK_Stat_GetAnnounceData Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pData As tagAnnounceData, ByRef nRetCount As Long, ByVal nMaxCount As Long)

''获取当前任务的调试信息
''Get the debug information of downloader
Declare Function FTK_Stat_GetBTDownloaderInfo Lib "FTKernelAPI" (ByVal HDownloader As Long) As String

'''''''''''''''''''''''''''''''''''''
'打开Torrent文件获取信息的函数列表
'Torrent file interface

'判断是不是自己定义的加密的Torrent文件
'Return boolean, tell us is a cipher torrent file
Declare Function FTK_Torrent_IsCipherTorrent Lib "FTKernelAPI" (ByVal lpszFileName As String) As Long

'执行从文件中读取数据并初始化对象操作
'Open a torrent file handle
Declare Function FTK_Torrent_Open Lib "FTKernelAPI" (ByVal lpszFileName As String, ByVal nCodePage As Long, ByVal lpszDesKey As String, ByVal bValidEOF As Boolean, ByVal bValidSort As Boolean) As Long

''执行从文件中读取数据并初始化对象操作, 如果失败, 返回错误信息
''Open a torrent file handle, if failed, return error information
Declare Function FTK_Torrent_SafeOpen Lib "FTKernelAPI" (ByVal lpszFileName As String, ByVal nCodePage As Long, ByVal lpszDesKey As String, ByVal bValidEOF As Boolean, ByVal bValidSort As Boolean, ByRef pErrInfo As tagErrInfo) As Long

''判断是不是自己定义的加密的Torrent数据流对象
''Return boolean, tell us is a cipher torrent binary data
Declare Function FTK_Torrent_IsCipherTorrentObj Lib "FTKernelAPI" (ByRef pData As Byte, ByVal nLength As Long) As Boolean

''执行从Torrent binary object中读取数据并初始化对象操作
''Open a torrent binary object
Declare Function FTK_Torrent_OpenObj Lib "FTKernelAPI" (ByRef pData As Byte, ByVal nLength As Long, ByVal nCodePage As Long, ByVal lpszDesKey As String, ByVal bValidEOF As Boolean, ByVal bValidSort As Boolean, ByRef pErrInfo As tagErrInfo) As Long

'关闭当前打开的Torrent文件
'Close Torrent file handle
Declare Sub FTK_Torrent_Close Lib "FTKernelAPI" (ByVal hTorrentFile As Long)

'判断是目录还是文件
'Return boolean, tell us is only a single file in torrent
Declare Function FTK_Torrent_IsFile Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取 Torrent 名称
'Get the name of torrent file
Declare Function FTK_Torrent_GetTorrentName Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As String

'获取torrent中的文件的个数 Lib "FTKernelAPI"(至少一个)
'Get total number of files
Declare Function FTK_Torrent_GetFilesCount Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取torrent中的文件列表 Lib "FTKernelAPI"(至少一个)
'Get a pointer to file list
Declare Sub FTK_Torrent_GetFiles Lib "FTKernelAPI" (ByVal hTorrentFile As Long, ByRef pFileInfo As tagFileInfo)

'获取torrent中的文件列表中的某个文件的信息
'Get a pointer to a file of file list
Declare Sub FTK_Torrent_GetFileInfo Lib "FTKernelAPI" (ByVal hTorrentFile As Long, ByVal nIndex As Long, ByRef pFileInfo As tagFileInfo)

'获取Info的Hash值, 内部使用
'Get the binary info hash of torrent file
Declare Function FTK_Torrent_GetInfoHash Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取info的Hash值, 十六进制
'Get the hex encoding info hash of torrent file
Declare Function FTK_Torrent_GetHexInfoHash Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As String

'获取 main annouce url
'Get mainb announce url
Declare Function FTK_Torrent_GetMainAnnounce Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As String

'获取 Announce 分组的个数
'Get the number of all announce list
Declare Function FTK_Torrent_GetAnnouncesCount Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取指定的 Announce 分组包含的Announce的个数
'Get the size of a announce list
Declare Function FTK_Torrent_GetAnnounceSize Lib "FTKernelAPI" (ByVal hTorrentFile As Long, ByVal nGroupIndex As Long) As Long

'获取指定的 Announce 分组中指定位置的Announce
'Get a annoucne of a announce list
Declare Function FTK_Torrent_GetAnnouncesVal Lib "FTKernelAPI" (ByVal hTorrentFile As Long, ByVal nGroupIndex As Long, ByVal nIndex As Long) As String

'获取 注释
'Get the comments
Declare Function FTK_Torrent_GetComments Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As String

'获取 Torrent 创建时间
'Get the creation time of torrent file
Declare Function FTK_Torrent_GetCreateTime Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取piece块的大小
'Get the size of piece
Declare Function FTK_Torrent_GetPieceSize Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取文件的大小
'Get the total file size to transfer
Declare Function FTK_Torrent_GetFileSize Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As TwoLong

'Piece块的个数
'Get the total number of piece
Declare Function FTK_Torrent_GetPieceCount Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'获取Piece Hash 的列表
'Get a pointer to piece hash list
Declare Function FTK_Torrent_GetPieceHashList Lib "FTKernelAPI" (ByVal hTorrentFile As Long) As Long

'释放PieceHash列表
'Release piece hash memory
Declare Sub FTK_Torrent_FreePieceHashList Lib "FTKernelAPI" (ByVal hTorrentFile As Long)

'获取Torrent文件的语言编码
'Get language code page of torrent file
Declare Sub FTK_Torrent_GetLanCodePage Lib "FTKernelAPI" (ByVal hTorrentFile As Long)

'''''''''''''''''''''''''''''''''''''
'制作Torrent文件的函数列表
'Create torrent file interface

'打开一个制作torrent文件的句柄
'Open a making torrent handle
Declare Function FTK_MT_Open Lib "FTKernelAPI" () As Long

'关闭打开的制作Torrent文件的句柄
'Close a making torrent handle
Declare Sub FTK_MT_Close Lib "FTKernelAPI" (ByVal hMakeTorrent As Long)

'执行生成对象的操作
'Start to making torrent file
Declare Function FTK_MT_MakeTorrent Lib "FTKernelAPI" (ByVal hMakeTorrent As Long) As Long

'停止Torrent文件制作
'Stop making torrent file
Declare Sub FTK_MT_StopMake Lib "FTKernelAPI" (ByVal hMakeTorrent As Long)

'获取制作文件的进度
'Get progress of making torrent file
Declare Function FTK_MT_GetMTProgress Lib "FTKernelAPI" (ByVal hMakeTorrent As Long) As Double

'另存为Torrent文件
'Save as a torrent file
Declare Function FTK_MT_SaveAsTorrentFile Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal lpszFileName As String, ByVal lpszDesKey As String) As Long

'设置 annouce url
'Set a main announce url
Declare Sub FTK_MT_SetAnnounceUrl Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal lpszValue As String)

'添加额外的Announce 列表
'Add a announce list
Declare Sub FTK_MT_AddAnnounceList Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByRef Announces As String, ByVal nCount As Long)

'添加额外的Announce 列表, example: announce1;announce2;announce3;
'Add a announce list, example: announce1;announce2;announce3;
Declare Sub FTK_MT_AddAnnounceList2 Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal lpszValue As String)

'清空额外的Announce 列表
'Clear all announce list
Declare Sub FTK_MT_ClearAnnounceList Lib "FTKernelAPI" (ByVal hMakeTorrent As Long)

'设置 注释
'Set comments
Declare Sub FTK_MT_SetComments Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal lpszValue As String)

'设置piece块的大小
'Set piece size to making torrent file
Declare Sub FTK_MT_SetPieceSize Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal dwPieceSize As Long)

'设置torrent中的文件
'Set the sourece file to making torrent file
Declare Sub FTK_MT_SetFile Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal lpszFileName As String)

'设置torrent中的文件目录 Lib "FTKernelAPI"(多个文件)
'Set the source path to making torrent file
Declare Sub FTK_MT_SetPath Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal lpszPathName As String)

'设置Torrent文件的语言代码 Lib "FTKernelAPI"(只对文件名称, 注释等有效)
'Set language code of torrent file
Declare Sub FTK_MT_SetLangCodePage Lib "FTKernelAPI" (ByVal hMakeTorrent As Long, ByVal nCodePage As Long)

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''Tracker interface, to get status of one torrent from tracker: peer count'seed count

''HTTP tracker接口， 用于获取http Tracker某任务的状态信息
''HTTP Tracker interface, to get status of one torrent from http tracker
Declare Function FTK_Tracker_Http1 Lib "FTKernelAPI" (ByVal lpszTracker As String, ByVal pInfoHash As String, ByVal qwFileSize As TwoLong, ByRef nPeerCount As Long, ByRef nSeedCount As Long, ByRef bNetwordErr As Boolean, ByVal lpszErrInfo As String, ByVal nLength As Long) As Boolean


''HTTP tracker接口， 用于获取http Tracker某任务的状态信息
''HTTP Tracker interface, to get status of one torrent from http tracker
Declare Function FTK_Tracker_Http2 Lib "FTKernelAPI" (ByVal lpszTorrentFileName As String, ByRef nPeerCount As Long, ByRef nSeedCount As Long, ByRef bNetwordErr As Boolean, ByVal lpszErrInfo As String, ByVal nLength As Long) As Boolean

''UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
''UDP Tracker interface, to get status of one torrent from UDP tracker
Declare Function FTK_Tracker_UDP1 Lib "FTKernelAPI" (ByVal lpszTracker As String, ByVal pInfoHash As String, ByVal qwFileSize As TwoLong, ByRef nPeerCount As Long, ByRef nSeedCount As Long, ByRef bNetwordErr As Boolean, ByVal lpszErrInfo As String, ByVal nLength As Long) As Boolean

''UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
''UDP Tracker interface, to get status of one torrent from UDP tracker
Declare Function FTK_Tracker_UDP2 Lib "FTKernelAPI" (ByVal lpszTorrentFileName As String, ByRef nPeerCount As Long, ByRef nSeedCount As Long, ByRef bNetwordErr As Boolean, ByVal lpszErrInfo As String, ByVal nLength As Long) As Boolean
    

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'Disk cache Settings

'Set Disk cache size
'设置磁盘缓存的大小
Declare Sub FTK_Disk_SetCache Lib "FTKernelAPI" (ByVal nMinCacheSize As Long, ByVal nMaxCacheSize As Long, ByVal nPhyMemorySize As Long)

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''Windows environment related interfaces

''Get local machine ip address(get the first ip or best ip if there are more than one NICs)
''获取本机的IP地址(在有多个的情况下，选择第一个，或者按照一定算法选择最合适的一个)
Declare Function FTK_Win_GetLocalIP Lib "FTKernelAPI" (ByRef bPrivateIP As Boolean) As String

''Open Windows ICS'ICF(Windows XP'Windows 2003)
''打开操作系统的网络连接防火墙和网络连接共享(Windows XP'Windows 2003)
Declare Sub FTK_Win_OpenWinXPICSF Lib "FTKernelAPI" (ByVal nPort As Integer, ByRef bOpenFirewall As Boolean, ByRef bPortMapping As Boolean, ByVal nProtocol As Byte, ByVal lpszIP As String, ByVal lpszAppName As String)

''Open UPnP port mapping(Win9x'WinME'Win2000'WinXP'Win2003)
''执行对于支持UPnP协议的Router进行自动的端口映射配置(内网处于Router后的机器必用)
Declare Function FTK_Win_AddUPnPPortMapping Lib "FTKernelAPI" (ByVal nPort As Integer, ByVal nProtocol As Byte, ByVal lpszIP As String) As Boolean

''Patch Windows XP SP2 tcpip.sys file for best TCP'IP performance
''对于Windows XP SP2 的tcpip.sys打补丁，破解连接数的限制，提高网络性能
Declare Function FTK_Win_PacthSP2TCPIPLimitFile Lib "FTKernelAPI" (nLimit As Long) As Long
